@@ -17,7 +17,10 @@ while (<IN>) {
 	while (s/\\$//) {
 		chomp($_ .= <IN>);
 	}
-	if (/^\s*(\w+_O_FILES)\s*=\s*(.*)/) {
+	if (/^\s*A\s*=\s*(.*)/) {
+		$a = $1;
+	}
+	elsif (/^\s*(\w+_O_FILES)\s*=\s*(.*)/) {
 		my ($k, $v) = ($1, $2);
 		$v =~ s/\s+/ /g;
 		$o{$k} = $v;
@@ -36,6 +39,7 @@ open(OUT, ">$pconfig");
 print OUT "# DO NOT CHANGE: this file is generated by '$0'\n";
 print OUT "# run 'make' to make perl6-config\n\n";
 print OUT qq{\$HERE = '$pwd';\n};
+print OUT qq{\$LIB = '$a';\n};
 print OUT qq{\$PARROT_ROOT = '$pr';\n};
 print OUT qq{\$O_FILES = '@o_files';\n};
 close OUT;
