@@ -20,7 +20,7 @@ use P6C::Tree;
 use P6C::Parser;
 
 use vars qw($IMCC $ASM $PARROT $PBC2C $HERE $CD $VERSION $PERL $slash $exe);
-use vars qw($PARROT_ROOT $O_FILES @temp_files);
+use vars qw($PARROT_ROOT $O_FILES @temp_files $LIB);
 $VERSION = '0.04';
 
 do 'perl6-config' or	# read pconfig, which was generated by Makefile
@@ -42,6 +42,7 @@ sub usage($) {
     usage:  perl6 [ p6c-options ] [ imcc-options ]
     [ asm-options ] [ run-options ]
     [ global-options ] file [arguments ... ]
+	    perl6 --clean *.p6
 
     p6c-options:
 
@@ -54,12 +55,15 @@ sub usage($) {
     --raw-tree       output raw parser tree
     --keep-xxx       keep intermediate file .xxx
     -k,--keep-all    keep all intermediate files
-    --clean          delete all possible produced files
+    --rm-exe         remove executable (mainly for testnative)
     --test-parser    interactive parser-testing mode
 
     -g,--debug-info  generate debug info, i.e. produce and keep #line comments
     -Ox		     optimize flag (currently only gcc)
                      Note: these does not optimize parrot's obj file.
+
+    --clean          delete all possible produced files for all mentioned
+    		     .p6 source file
 
     Parse::RecDescent control:
     --trace          set $::RD_TRACE
@@ -86,9 +90,12 @@ sub usage($) {
 
     run-options:
 
-    -R.. --parrot-options=bdhjpPgtv.
+    -Rx,--parrot-options=bdhjpPgtv.
     pass option(s) to parrot, s. parrot -h
     -Rb.           e.g. call parrot -b -.
+    -C,--compile-pbc compile and run C executable
+    --shared         use dynamic parrot lib
+    --ignore-exitcode don't report non zero exit codes
     -q,--quick       run .pbc directly, if present and newer then .p6
 
     global-options:
@@ -117,7 +124,7 @@ GetOptions(\%o,qw{
     verbose|v+
     warnings|w+
     parrot-options|R=s
-    compile-pbc|C quick|q
+    compile-pbc|C quick|q ignore-exitcode rm-exe shared
     optimize|O=s
     pbc|B pasm|S imc|I
     keep-imc keep-pasm keep-pbc keep-c keep-o keep-all|k keep-warn
@@ -150,6 +157,7 @@ sub clean_temps {
 	my $ext;
 	($ext = $f) =~ s/.*\.//;
 	$f =~ s/$exe$//;
+	next unless (-e $f);
 	if ($o{verbose} > 1) {
 	    print STDERR "unlink($f)\n" unless ($o{"keep-$ext"});
 	}
@@ -351,7 +359,8 @@ sub run {
 	run_interactive();
 	return;
     }
-    push(@ARGV, "-") unless(@ARGV);
+    $ARGV[0] = '-' unless(@ARGV);
+    while (@ARGV) {
     my $f = shift @ARGV;
     print STDERR "processing file '$f'\n" if($o{verbose}>1);
     if ($f eq '-') {
@@ -359,10 +368,13 @@ sub run {
     } else {
 	($filebase = $f) =~ s/\.[^.]*$//;
     }
+	# special, clean all generated files
     if ($o{clean}) {
-	clean_files($filebase);
+	    clean_files($filebase) if ($f =~ /\.p6$/ || $f eq '-');
 	next;
     }
+
+	# normal processing, passes rest of ARGV to running prog
     # run next passes
     my $fw = "$filebase.warn";
     unlink($fw);
@@ -381,6 +393,8 @@ sub run {
     else {
 	$parser = get_parser() unless ($parser);
 	pass1($parser, $f, $fw);
+    }
+	return;
     }
 }
 
@@ -480,7 +494,10 @@ sub pass4($$) {
 	push(@temp_files, "$filebase.c");
 	push(@temp_files, "$filebase$PConfig{o}");
 	verbose(1, "compiling $cmd");
-	my $c = `$cmd`;
+	my $c;
+	warnings(sub {
+	    $c = `$cmd`;
+	}, $fw);
 	open(C, ">$filebase.c") or die("Can't write '$filebase.c'");
 	print C $c;
 	close(C);
@@ -493,29 +510,30 @@ sub pass4($$) {
 	if (system($cmd)) {
 	    mydie($?, $cmd);
 	}
-	# or cd ../.. && make libparrot.a
-	# gcc -g -o foo foo.o -L../../ -lparrot -ldl -lm
-	my $objs = join" ",map{ s/\$\(O\)/$PConfig{o}/g; $_ } split(/ /,
-		$O_FILES);
+	#my $objs = join" ",map{ s/\$\(O\)/$PConfig{o}/g; $_ } split(/ /,
+	#	$O_FILES);
+	# XXX Configure lacks options for Win
+	my $lib = !$o{shared} ? "libparrot$LIB" : '-L blib/lib -lparrot';
 	$cmd = "$CD $PConfig{ld} $PConfig{ldflags} ".
 	"$PConfig{ld_out} $HERE/$filebase $HERE/$filebase$PConfig{'o'} ".
-	"$objs ".
+	"$lib ".
 	"$PConfig{libs}";
 	verbose(1, "linking $cmd");
 	if (system($cmd)) {
 	    mydie($?,"Linking");
 	}
 	verbose(1, "running $filebase @ARGV");
-	if (system($filebase, @ARGV)) {
+	if (system($filebase, @ARGV) && !$o{'ignore-exitcode'}) {
 	    mydie($?, $filebase);
 	}
+	unlink($filebase) if (-e $filebase && $o{'rm-exe'});
 
     }
     else {
 	my @opt = map { "-$_" } split(//, $o{'parrot-options'});
 	my $cmd = "$PARROT @opt $file @ARGV";
 	verbose(1, "running: $cmd");
-	if (system($cmd)) {
+	if (system($cmd) && !$o{'ignore-exitcode'}) {
 	    mydie($?, $cmd);
 	}
     }
@@ -550,7 +568,7 @@ These options are for the parser P6C and for output generation.
 
 =item -C,--compile-pbc
 
-Compile to executable and run native. This is currently br0ken.
+Compile to executable and run native. s. also Run options below
 
 =item -B,--pbc
 
@@ -686,6 +704,23 @@ Run the .pbc file directly if it does exist and is not older then the
 pass option(s) to parrot, s. parrot -h
 
     e.g. "perl6 -Rb. ..."  calls "parrot -b -. ..."
+
+=item --shared
+
+Run against shared dynamic libparrot - you must build it currently manually
+in parrot root with:
+
+	make libparrot.a	# static lib
+	make shared		# dynamic lib
+
+=item --ignore-exitcode
+
+don't report non zero exit codes. This is needed e.g. for make test,
+when native code is tested.
+
+=item --rm-exe
+
+Remove executables after running. This is useful for testnative.
 
 =back
 
